Fixed the alignment issue for badge wms#12299, also fixed wms#14480 issue of width for
the input fields inside editable tables.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -1592,6 +1592,14 @@ body {
       right: 0;
     }
   }
+  /****Top navbar badge****/
+  .app-navbar {
+    .app-nav-item {
+      .btn .badge, a .badge {
+        top: 0;
+      }
+    }
+  }
   /***reset the margin for the panel***/
   .app-livelist.panel {
     margin-bottom: 0;
